initial/src/main/minigo/parser/.antlr/MiniGoParser.py
# Generated from c:/Users/buinh/OneDrive/Desktop/STUDY/HK242/PPL/taocaymoi/initial/initial/src/main/minigo/parser/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "':='", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", 
                     "'!'", "'='", "'.'", "';'", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "','", "'_'", "':'", "'if'", "'else'", 
                     "'for'", "'return'", "'func'", "'type'", "'struct'", 
                     "'interface'", "'string'", "'int'", "'float'", "'boolean'", 
                     "'const'", "'var'", "'continue'", "'break'", "'range'", 
                     "'nil'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "EQ", "NEQ", "LT", "LE", "GT", "GE", 
                      "ASSIGN_INIT", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", 
                      "DIV_ASSIGN", "MOD_ASSIGN", "PLUS", "MINUS", "MULT", 
                      "DIV", "MOD", "AND", "OR", "NOT", "ASSIGN", "DOT", 
                      "SEMI", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LBRACE", 
                      "RBRACE", "COMMA", "UNDERSCORE", "COLON", "KW_IF", 
                      "KW_ELSE", "KW_FOR", "KW_RETURN", "KW_FUNC", "KW_TYPE", 
                      "KW_STRUCT", "KW_INTERFACE", "KW_STRING", "KW_INT", 
                      "KW_FLOAT", "KW_BOOLEAN", "KW_CONST", "KW_VAR", "KW_CONTINUE", 
                      "KW_BREAK", "KW_RANGE", "KW_NIL", "KW_TRUE", "KW_FALSE", 
                      "NEWLINE", "ID", "INT_LIT", "FLOAT_LIT", "STRING_LIT", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "WS", "COMMENT", 
                      "MULTILINE_COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_returntype = 2
    RULE_vardecl = 3
    RULE_constdecl = 4
    RULE_funcdecl = 5
    RULE_paramlist = 6
    RULE_param = 7
    RULE_identifierList = 8
    RULE_block = 9
    RULE_stmt = 10
    RULE_methoddecl = 11
    RULE_receiver = 12
    RULE_typedef = 13
    RULE_structType = 14
    RULE_structfields = 15
    RULE_fielddecl = 16
    RULE_interfaceType = 17
    RULE_interfaceMethodList = 18
    RULE_interfaceMethodDecl = 19
    RULE_compare = 20
    RULE_expr = 21
    RULE_expr1 = 22
    RULE_expr2 = 23
    RULE_expr3 = 24
    RULE_expr4 = 25
    RULE_expr5 = 26
    RULE_expr6 = 27
    RULE_expr7 = 28
    RULE_term = 29
    RULE_structliteral = 30
    RULE_structliteralbody = 31
    RULE_fieldinit = 32
    RULE_lvalue = 33
    RULE_assign_op = 34
    RULE_assignstmt = 35
    RULE_returnstmt = 36
    RULE_callstmt = 37
    RULE_breakstmt = 38
    RULE_continuestmt = 39
    RULE_ifstmt = 40
    RULE_elseifstmt = 41
    RULE_elsestmt = 42
    RULE_datatypefor = 43
    RULE_vardeclfor = 44
    RULE_lvaluefor = 45
    RULE_assignstmtforscalar = 46
    RULE_forstmt = 47
    RULE_datatype = 48
    RULE_primitive_type = 49
    RULE_composite_type = 50
    RULE_arraytype = 51
    RULE_arrayliteral = 52
    RULE_literalbody = 53
    RULE_arrayelement = 54

    ruleNames =  [ "program", "decl", "returntype", "vardecl", "constdecl", 
                   "funcdecl", "paramlist", "param", "identifierList", "block", 
                   "stmt", "methoddecl", "receiver", "typedef", "structType", 
                   "structfields", "fielddecl", "interfaceType", "interfaceMethodList", 
                   "interfaceMethodDecl", "compare", "expr", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "expr7", "term", 
                   "structliteral", "structliteralbody", "fieldinit", "lvalue", 
                   "assign_op", "assignstmt", "returnstmt", "callstmt", 
                   "breakstmt", "continuestmt", "ifstmt", "elseifstmt", 
                   "elsestmt", "datatypefor", "vardeclfor", "lvaluefor", 
                   "assignstmtforscalar", "forstmt", "datatype", "primitive_type", 
                   "composite_type", "arraytype", "arrayliteral", "literalbody", 
                   "arrayelement" ]

    EOF = Token.EOF
    EQ=1
    NEQ=2
    LT=3
    LE=4
    GT=5
    GE=6
    ASSIGN_INIT=7
    ADD_ASSIGN=8
    SUB_ASSIGN=9
    MUL_ASSIGN=10
    DIV_ASSIGN=11
    MOD_ASSIGN=12
    PLUS=13
    MINUS=14
    MULT=15
    DIV=16
    MOD=17
    AND=18
    OR=19
    NOT=20
    ASSIGN=21
    DOT=22
    SEMI=23
    LPAREN=24
    RPAREN=25
    LBRACK=26
    RBRACK=27
    LBRACE=28
    RBRACE=29
    COMMA=30
    UNDERSCORE=31
    COLON=32
    KW_IF=33
    KW_ELSE=34
    KW_FOR=35
    KW_RETURN=36
    KW_FUNC=37
    KW_TYPE=38
    KW_STRUCT=39
    KW_INTERFACE=40
    KW_STRING=41
    KW_INT=42
    KW_FLOAT=43
    KW_BOOLEAN=44
    KW_CONST=45
    KW_VAR=46
    KW_CONTINUE=47
    KW_BREAK=48
    KW_RANGE=49
    KW_NIL=50
    KW_TRUE=51
    KW_FALSE=52
    NEWLINE=53
    ID=54
    INT_LIT=55
    FLOAT_LIT=56
    STRING_LIT=57
    UNCLOSE_STRING=58
    ILLEGAL_ESCAPE=59
    WS=60
    COMMENT=61
    MULTILINE_COMMENT=62
    ERROR_CHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.DeclContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.DeclContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_program




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 110
                self.decl()
                self.state = 113 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 105965433126912) != 0)):
                    break

            self.state = 115
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constdecl(self):
            return self.getTypedRuleContext(MiniGoParser.ConstdeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MiniGoParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MiniGoParser.FuncdeclContext,0)


        def methoddecl(self):
            return self.getTypedRuleContext(MiniGoParser.MethoddeclContext,0)


        def typedef(self):
            return self.getTypedRuleContext(MiniGoParser.TypedefContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl




    def decl(self):

        localctx = MiniGoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.constdecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.vardecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.funcdecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                self.methoddecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 121
                self.typedef()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturntypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def datatype(self):
            return self.getTypedRuleContext(MiniGoParser.DatatypeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_returntype




    def returntype(self):

        localctx = MiniGoParser.ReturntypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_returntype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.datatype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_VAR(self):
            return self.getToken(MiniGoParser.KW_VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def datatype(self):
            return self.getTypedRuleContext(MiniGoParser.DatatypeContext,0)


        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_vardecl




    def vardecl(self):

        localctx = MiniGoParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(MiniGoParser.KW_VAR)
            self.state = 127
            self.match(MiniGoParser.ID)
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26, 39, 40, 41, 42, 43, 44, 54]:
                self.state = 128
                self.datatype()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 129
                    self.match(MiniGoParser.ASSIGN)
                    self.state = 130
                    self.expr(0)


                pass
            elif token in [21]:
                self.state = 133
                self.match(MiniGoParser.ASSIGN)
                self.state = 134
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 137
            self.match(MiniGoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_CONST(self):
            return self.getToken(MiniGoParser.KW_CONST, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_constdecl




    def constdecl(self):

        localctx = MiniGoParser.ConstdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(MiniGoParser.KW_CONST)
            self.state = 140
            self.match(MiniGoParser.ID)
            self.state = 141
            self.match(MiniGoParser.ASSIGN)
            self.state = 142
            self.expr(0)

            self.state = 143
            self.match(MiniGoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_FUNC(self):
            return self.getToken(MiniGoParser.KW_FUNC, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def LPAREN(self):
            return self.getToken(MiniGoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniGoParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MiniGoParser.ParamlistContext,0)


        def returntype(self):
            return self.getTypedRuleContext(MiniGoParser.ReturntypeContext,0)


        def block(self):
            return self.getTypedRuleContext(MiniGoParser.BlockContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_funcdecl




    def funcdecl(self):

        localctx = MiniGoParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(MiniGoParser.KW_FUNC)
            self.state = 146
            self.match(MiniGoParser.ID)
            self.state = 147
            self.match(MiniGoParser.LPAREN)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 148
                self.paramlist()


            self.state = 151
            self.match(MiniGoParser.RPAREN)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 18049033192865792) != 0):
                self.state = 152
                self.returntype()


            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 155
                self.block()


            self.state = 158
            self.match(MiniGoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.ParamContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.COMMA)
            else:
                return self.getToken(MiniGoParser.COMMA, i)

        def getRuleIndex(self):
            return MiniGoParser.RULE_paramlist




    def paramlist(self):

        localctx = MiniGoParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.param()
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 161
                self.match(MiniGoParser.COMMA)
                self.state = 162
                self.param()
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(MiniGoParser.IdentifierListContext,0)


        def datatype(self):
            return self.getTypedRuleContext(MiniGoParser.DatatypeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_param




    def param(self):

        localctx = MiniGoParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.identifierList()
            self.state = 169
            self.datatype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.ID)
            else:
                return self.getToken(MiniGoParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.COMMA)
            else:
                return self.getToken(MiniGoParser.COMMA, i)

        def getRuleIndex(self):
            return MiniGoParser.RULE_identifierList




    def identifierList(self):

        localctx = MiniGoParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(MiniGoParser.ID)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 172
                self.match(MiniGoParser.COMMA)
                self.state = 173
                self.match(MiniGoParser.ID)
                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(MiniGoParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MiniGoParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.StmtContext,i)

